--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -7,3 +7,8 @@ logging.level.org.springframework.jdbc=debug
 
 # unique ???? DB ???? ??
 #spring.datasource.generate-unique-name=false
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
